bad request tests on post endpoint
