# api/openapi.yaml
@@ -155,30 +155,6 @@ paths:
         explode: false
         schema:
           type: string
-      - name: day
-        in: query
-        description: the selected day
-        required: true
-        style: form
-        explode: false
-        schema:
-          type: string
-      - name: time
-        in: query
-        description: the selected time
-        required: true
-        style: form
-        explode: false
-        schema:
-          type: string
-      - name: musclegroup
-        in: query
-        description: the muscle group the user will train
-        required: true
-        style: form
-        explode: false
-        schema:
-          type: string
       requestBody:
         $ref: '#/components/requestBodies/Reservation'
       responses:
